--- a/Estilos/proyecto1.css
+++ b/Estilos/proyecto1.css
@@ -47,11 +47,72 @@ justify-content: center;
 
 }
 
-
-
-}
 .imagen2{
 
     display: flex;
 flex-direction: column;
+}
+
+.hobby{
+    margin-left: 20px;
+    display: flex;
+    align-self: center;
+font-size: 20px;
+
+}
+
+
+.icono2{
+margin-right: 500px;
+}
+
+.icono{
+    margin-right: 40px;
+    margin-top: 40px;
+}
+
+.acomodar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.linea{
+    width: 100px;
+    height: 2px;
+    background-color: black;
+    margin-right: 20px;
+    margin-left: 20px;
+
+}
+
+.margen{
+    border: solid;
+
+}
+
+.mover{
+margin-left: 20px;
+font-size: 20px;
+}
+
+.habilidades{
+    margin-left: 20px;
+}
+
+.lineaaa{
+border-left: 2px solid black;
+ width: 175px;
+}
+
+
+.lineahorizontal{
+    border: none;
+    border-left: 2px solid;
+}
+
+.fotoo{
+position: relative;
+left: 800px;
+
 }
