--- a/Estilos/proyecto1.css
+++ b/Estilos/proyecto1.css
@@ -1,12 +1,12 @@
 .nombre{
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
  
 }
 
 .puesto{
     text-align: center;
-   
+   font-size: 50px;
 }
 
 .info{
@@ -54,10 +54,10 @@ flex-direction: column;
 }
 
 .hobby{
-    margin-left: 20px;
+    margin-left: 60px;
     display: flex;
     align-self: center;
-font-size: 20px;
+font-size: 30px;
 
 }
 
@@ -92,12 +92,13 @@ margin-right: 500px;
 }
 
 .mover{
-margin-left: 20px;
-font-size: 20px;
+margin-left: 30px;
+font-size: 30px;
 }
 
 .habilidades{
-    margin-left: 20px;
+    margin-left: 30px;
+    font-size: 50px;
 }
 
 .lineaaa{
@@ -112,7 +113,14 @@ border-left: 2px solid black;
 }
 
 .fotoo{
-position: relative;
-left: 800px;
+margin-left: 170px;
 
+}
+.header{
+    font-size: 30px;
+
+}
+.experiencia{
+    display: flex;
+    margin-left: 30px;
 }
